@@ -9,6 +9,7 @@ BUG FIXES
 - #3315990: StaticXxxField false positive on initializer: StaticSimpleDateFormatField, StaticDateFormatField, StaticCalendarField.
 - #3314773: UnnecessaryGroovyImportRule: false positive on static imports
 - #3315992: ClosureAsLastMethodParameter - false positive, when method call surrounded by parentheses.
+- #3315946: Cmdline runner does not respect -includes and -excludes
 
 
 Changes in version 0.14 (June 2011)
